Registration and login form

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    DATABASE_HOST: db
+    DATABASE_USER: root
+    DATABASE_PASSWORD:
 
 services:
     # default configuration for services in *this* file
