--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=ad839acf84fb151363b2c773ef3b53dd
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:toor@localhost:3306/hazmeunhueco
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
