--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=MAILER_URL=gmail://alex1995ariza@gmail.com:@localhost
 ###< symfony/swiftmailer-bundle ###
 
 ###> symfony/messenger ###
