--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.14",
         "phpspec/phpspec": "^5.1",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.11",
